<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.ppl.fikkrip.itrip.controller.activity.JawaActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            app:titleTextColor="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:text="@string/jawa"
                android:textSize="25sp"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:layout_gravity="start"/>

            <ImageButton
                android:id="@+id/notify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_notifications"
                android:background="@color/colorPrimary"
                android:paddingRight="10dp"
                android:layout_gravity="end"/>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBar">
        <LinearLayout
            android:background="@color/colorPrimary"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center">
            <com.daimajia.slider.library.SliderLayout
                android:id="@+id/slider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/nature"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:drawableTop="@drawable/ic_nature"
                android:padding="10dp"
                android:text="@string/nature"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/modern"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:drawableTop="@drawable/ic_modern"
                android:padding="10dp"
                android:text="@string/modern"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/culture"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:drawableTop="@drawable/ic_culture"
                android:padding="10dp"
                android:text="@string/culture"
                android:textSize="20sp"
                android:textStyle="bold"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.2"
            android:gravity="center_horizontal"
            android:weightSum="1">
            <Button
                android:id="@+id/culinary"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:drawableTop="@drawable/ic_culinary"
                android:padding="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/culinary"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/event"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:drawableTop="@drawable/ic_event"
                android:padding="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/event"
                android:textSize="20sp"
                android:textStyle="bold"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
